--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>ANUWH MD - WhatsApp Bot Linking</title>
-  <style>
-    body { font-family: Arial, sans-serif; background: #000; color: #fff; text-align: center; padding: 50px; }
-    h1 { color: #0f0; }
-    button { padding: 12px 24px; font-size: 18px; margin: 10px; border: none; border-radius: 8px; cursor: pointer; background: #222; color: #0f0; }
-    button:hover { background: #0f0; color: #000; }
-  </style>
+<meta charset="UTF-8">
+<title>ANUWH MD - Number Pairing</title>
+<style>
+body { font-family: Arial; background: #000; color: #0f0; text-align: center; padding: 50px; }
+input, button { padding: 10px; font-size: 18px; margin: 10px; border-radius: 6px; }
+button { cursor: pointer; background: #0f0; color: #000; border: none; }
+</style>
 </head>
 <body>
-  <h1>ANUWH MD Bot</h1>
-  <p>POWERED BY ANUGA OFFICIAL</p>
-  <p>Choose a linking method:</p>
+<h1>ANUWH MD Bot Pairing</h1>
+<p>Enter your phone number to generate pairing code:</p>
+<input type="text" id="usernumber" placeholder="e.g. 947XXXXXXXX" />
+<button onclick="generateCode()">Generate Pairing Code</button>
+<p id="result"></p>
 
-  <a href="/qr"><button>📲 Link via QR</button></a>
-  <a href="/pair"><button>🔢 Link via Pairing Code</button></a>
+<script>
+async function generateCode() {
+  const number = document.getElementById('usernumber').value.trim();
+  if (!number) return alert('Please enter your number');
+  
+  const res = await fetch('/pair', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ username: number })
+  });
+  const data = await res.json();
+  if (data.success) {
+    document.getElementById('result').innerText = `Your WhatsApp Pairing Code: ${data.code}`;
+  } else {
+    document.getElementById('result').innerText = '❌ Failed to generate code';
+  }
+}
+</script>
 </body>
 </html>
